scrollbar fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,3 +119,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    background: transparent;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px var(--sidebar-primary)
+}
